Add swagger dependency to pom.xml